[gd_scene load_steps=9 format=2]

[ext_resource path="res://textures/environment/Pickup.png" type="Texture" id=1]
[ext_resource path="res://font/611Bit.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/ui/HUD.gd" type="Script" id=3]
[ext_resource path="res://textures/backdrop.png" type="Texture" id=4]
[ext_resource path="res://font/611BitSmall.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/partial/Cursor.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 23, 23 ), Vector2( 23, 23 ), Vector2( -64, 23 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=2]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -64, 23 ), Vector2( 23, 23 ), Vector2( 23, 23 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "update_label"
} ]
}

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 3 )

[node name="Cursor" parent="." instance=ExtResource( 6 )]

[node name="Counter" type="Sprite" parent="."]
position = Vector2( -64, 23 )
texture = ExtResource( 1 )
hframes = 4

[node name="Label" type="Label" parent="Counter"]
margin_left = 15.0
margin_top = -13.0
margin_right = 55.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="CounterAnim" type="AnimationPlayer" parent="Counter"]
anims/Hide = SubResource( 1 )
anims/Show = SubResource( 2 )

[node name="Popup" type="NinePatchRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
margin_left = 72.0
margin_top = 8.0
margin_right = -72.0
margin_bottom = 56.0
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 5 )
text = "Here's some stuff to look at!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Popup"]

[node name="CheatsLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 5 )
text = "CHEATS ENABLED"
align = 1
valign = 2
autowrap = true

[node name="Speedometer" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -8.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 5 )
text = "Speed: 100"
align = 2
valign = 2
autowrap = true

[node name="Timer" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -190.0
margin_top = 8.0
margin_right = -11.9999
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "0:00.0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Results" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Results"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "--The End--

%02d:%04.1f
%d/%d Flowers
%d Respawns

Thanks for playing!
(Esc to open menu)"
align = 1
valign = 1

[connection signal="animation_finished" from="Counter/CounterAnim" to="." method="_on_CounterAnim_animation_finished"]
